--- a/hexschool-summer-camp-vue3/week3/hw.html
+++ b/hexschool-summer-camp-vue3/week3/hw.html
@@ -1,93 +1,144 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <style>
-      .completed {
-        text-decoration: line-through
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <style>
+    .completed {
+      text-decoration: line-through
+    }
 
-  <body>
-    <div id="app">
-      <div id="app" class="container my-3">
-        <div class="input-group mb-3">
-          <span class="input-group-text">待辦事項</span>
-          <input type="text" class="form-control" placeholder="準備要做的任務"
-            id="newTodo">
-          <button class="btn btn-primary" type="button" id="addTodo">新增</button>
-        </div>
-        <div class="card text-center">
-          <ul class="list-group list-group-flush text-left" id="todoList">
-            <li  class="list-group-item">
-              <div class="d-flex">
-                <div class="form-check">
-                  <div>
-                    <input id="a" type="checkbox" class="form-check-input">
-                    <label for="a">代辦事項</label>
-                  </div>
-                </div>
-                <button type="button" class="btn-close ms-auto remove">
-                </button>
-              </div>
-            </li>
-            <li  class="list-group-item">
-              <div class="d-flex">
-                <div class="form-check">
-                  <div>
-                    <input id="b" type="checkbox" class="form-check-input" checked>
-                    <label for="b" class="completed">已完成 代辦事項</label>
-                  </div>
-                </div>
-                <button type="button" class="btn-close ms-auto remove">
-                </button>
-              </div>
-            </li>
-            <li  class="list-group-item">
-              <div class="d-flex">
-                <div class="form-check">
-                  <input class="form-control" type="text" placeholder="編輯"/>
+    [v-cloak] {
+      display: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app">
+    <div id="app" class="container my-3">
+      <div class="input-group mb-3">
+        <span class="input-group-text">待辦事項</span>
+        <input type="text" class="form-control" placeholder="準備要做的任務" v-model="newTodo">
+        <button class="btn btn-primary" type="button" @click="addItem">新增</button>
+      </div>
+      <div class="card text-center">
+        <ul class="list-group list-group-flush text-left" id="todoList">
+          <li class="list-group-item" v-for="(todo, key) in filterTodos" :key="key">
+            <div class="d-flex">
+              <div class="form-check">
+                <div style="width: 100%;">
+                  <input :id="'todo' + key" type="checkbox" class="form-check-input" :checked="todo.finish" @change="todo.finish = !todo.finish">
+                  <label :class="{completed: todo.finish}" @click="todo.edit = !todo.edit" v-if="!todo.edit">{{ todo.text }}</label>
+                  <input class="form-control" type="text" placeholder="請輸入代辦事項" v-if="todo.edit" v-model="todo.text" @keyup.enter="updateItem(todo)"/>
                 </div>
               </div>
-            </li>
-          </ul>
-          <div class="card-footer d-flex justify-content-between">
-            <span>有 <span id="taskCount">1</span> 筆任務</span>
-            <div>
-              <a href="#" class="me-3">全部</a>
-              <a href="#" class="me-3">未完成</a>
-              <a href="#" class="me-3">已完成</a>
-              <a href="#" >清除所有任務</a>
+              <button type="button" class="btn-close ms-auto remove" @click="deleteItem(todo)">
+              </button>
             </div>
+          </li>
+        </ul>
+        <div class="card-footer d-flex justify-content-between">
+          <span>有 <span id="taskCount">{{ filterTodos.length }}</span> 筆任務</span>
+          <div>
+            <a href="#" class="me-3 btn btn-outline-primary btn-sm" :class="{active: filterParams.finish === null}" @click="filterParams.finish = null">全部</a>
+            <a href="#" class="me-3 btn btn-outline-primary btn-sm" :class="{active: filterParams.finish === false}" @click="filterParams.finish = false">未完成</a>
+            <a href="#" class="me-3 btn btn-outline-primary btn-sm" :class="{active: filterParams.finish === true}" @click="filterParams.finish = true">已完成</a>
+            <a href="#" class="btn btn-outline-primary btn-sm" @click="clearItems">清除所有任務</a>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-      crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vue@next"></script>
-    <script>
-      Vue.createApp({
-        data() {
-          return {
-            newTodo: '',
-            todoList: [],
-          }
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous">
+  </script>
+  <script src="https://unpkg.com/vue@next"></script>
+  <script>
+    Vue.createApp({
+      data() {
+        return {
+          newTodo: '',
+          autoId: 3,
+          filterParams: {
+            finish: null,
+          },
+          todos: [
+            {
+              id: 1,
+              text: '代辦事項',
+              finish: false,
+              edit: false,
+            },
+            {
+              id: 2,
+              text: '已完成 代辦事項',
+              finish: true,
+              edit: false,
+            },
+          ],
+        }
+      },
+      methods: {
+        async init() {
+          this.histories = await this.getHistories();
         },
-        methods: {
-          
+        async getHistories() {
+          return JSON.parse(localStorage.getItem('histories'));
         },
-      }).mount('#app');
-    </script>
-  </body>
+        async updateHistories() {
+          localStorage.setItem('histories', JSON.stringify(this.histories));
+        },
+        async addItem() {
+          this.todos.unshift({
+            id: this.autoId++,
+            text: this.newTodo,
+            finish: false,
+          });
+          this.newTodo = '';
+        },
+        async deleteItem(item) {
+          const index = this.todos.findIndex(todo => todo.id === item.id);
+          this.todos.splice(index, 1);
+        },
+        async updateItem(item) {
+          item.edit = !item.edit
+        },
+        async clearItems() {
+          this.todos = [];
+        },
+      },
+      computed: {
+        filterTodos() {
+          return this.todos.filter(todo => {
+            let condition = false;
+            let allNull = true;
+            if (this.filterParams.finish != null) {
+              allNull = false;
+              condition = condition || (this.filterParams.finish === todo.finish)
+            }
+            // more if conditions...
+            // ...
+
+            if (allNull) {
+              return todo
+            } else {
+              return condition;
+            }
+          });
+        }
+      },
+      mounted() {
+
+      }
+    }).mount('#app');
+  </script>
+</body>
 
 </html>
