--- a/hexschool-summer-camp-vue3/week3/hw.html
+++ b/hexschool-summer-camp-vue3/week3/hw.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>代辦事項 Demo | Vue</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -25,16 +25,16 @@
     <div id="app" class="container my-3">
       <div class="input-group mb-3">
         <span class="input-group-text">待辦事項</span>
-        <input type="text" class="form-control" placeholder="準備要做的任務" v-model="newTodo">
+        <input type="text" class="form-control" placeholder="準備要做的任務" v-model="newTodo" @keyup.enter="addItem">
         <button class="btn btn-primary" type="button" @click="addItem">新增</button>
       </div>
-      <div class="card text-center">
+      <div class="card text-center" v-cloak>
         <ul class="list-group list-group-flush text-left" id="todoList">
           <li class="list-group-item" v-for="(todo, key) in filterTodos" :key="key">
             <div class="d-flex">
               <div class="form-check">
                 <div style="width: 100%;">
-                  <input :id="'todo' + key" type="checkbox" class="form-check-input" :checked="todo.finish" @change="todo.finish = !todo.finish">
+                  <input :id="'todo' + key" type="checkbox" class="form-check-input" :checked="todo.finish" @change="finishItem(todo)">
                   <label :class="{completed: todo.finish}" @click="todo.edit = !todo.edit" v-if="!todo.edit">{{ todo.text }}</label>
                   <input class="form-control" type="text" placeholder="請輸入代辦事項" v-if="todo.edit" v-model="todo.text" @keyup.enter="updateItem(todo)"/>
                 </div>
@@ -70,30 +70,35 @@
             finish: null,
           },
           todos: [
-            {
-              id: 1,
-              text: '代辦事項',
-              finish: false,
-              edit: false,
-            },
-            {
-              id: 2,
-              text: '已完成 代辦事項',
-              finish: true,
-              edit: false,
-            },
+            // {
+            //   id: 1,
+            //   text: '代辦事項',
+            //   finish: false,
+            //   edit: false,
+            // },
+            // {
+            //   id: 2,
+            //   text: '已完成 代辦事項',
+            //   finish: true,
+            //   edit: false,
+            // },
           ],
         }
       },
       methods: {
         async init() {
-          this.histories = await this.getHistories();
+          // Inititailize data()
+          let data = await this.loadData();
+          console.log(data);
+          for (const key in data) {
+            this[key] = data[key];
+          }
         },
-        async getHistories() {
-          return JSON.parse(localStorage.getItem('histories'));
+        async loadData() {
+          return JSON.parse(localStorage.getItem('data') ?? '{}');
         },
-        async updateHistories() {
-          localStorage.setItem('histories', JSON.stringify(this.histories));
+        async updateData() {
+          localStorage.setItem('data', JSON.stringify(this.$data));
         },
         async addItem() {
           this.todos.unshift({
@@ -102,40 +107,46 @@
             finish: false,
           });
           this.newTodo = '';
+          this.updateData();
         },
         async deleteItem(item) {
           const index = this.todos.findIndex(todo => todo.id === item.id);
           this.todos.splice(index, 1);
+          this.updateData();
+        },
+        async finishItem(item) {
+          item.finish = !item.finish
+          this.updateData();
         },
         async updateItem(item) {
           item.edit = !item.edit
+          this.updateData();
         },
         async clearItems() {
           this.todos = [];
+          this.updateData();
         },
       },
       computed: {
         filterTodos() {
+          // If all filterParams are null, then return all data.
+          if (Object.values(this.filterParams).every(value => value == null)) {
+            return this.todos;
+          } 
+          
+          // Filter data by filterParams.
           return this.todos.filter(todo => {
-            let condition = false;
-            let allNull = true;
-            if (this.filterParams.finish != null) {
-              allNull = false;
-              condition = condition || (this.filterParams.finish === todo.finish)
-            }
-            // more if conditions...
-            // ...
+            return (this.filterParams.finish === todo.finish);
 
-            if (allNull) {
-              return todo
-            } else {
-              return condition;
-            }
+            // More conditions...
+            // return (this.filterParams.condition1 === todo.condition1)
+            // || (this.filterParams.condition2 === todo.condition2);
+            // ...
           });
         }
       },
       mounted() {
-
+        this.init();
       }
     }).mount('#app');
   </script>
